# MIVisionX

./: .Doxyfile  .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CMakeLists.txt  Doxygen.txt  LICENSE  LICENSE.txt  MIVisionX-Lite-setup.py  MIVisionX-Lite.sln  MIVisionX-setup.py  MIVisionX.sln  README.md  _config.yml  copyright.txt  kernels.h  prior_box_layer.cpp  rmake.py  vx_amd_nn.h
amd_openvx/: CMakeLists.txt  README.md  amd_openvx.sln
amd_openvx/cmake/: FindAMDRPP.cmake  FindFFmpeg.cmake  FindHALF.cmake  FindMIVisionX.cmake  FindOpenCL.cmake  FindTurboJpeg.cmake
amd_openvx/openvx/: CMakeLists.txt  README.md  openvx.vcxproj  openvx.vcxproj.filters
amd_openvx_extensions/: CMakeLists.txt  README.md  amd_loomsl.sln  amd_opencv.sln  amd_winml.sln
amd_openvx_extensions/amd_custom/: CMakeLists.txt  CustomNode.md  README.md
amd_openvx_extensions/amd_loomsl/: CMakeLists.txt  COPYRIGHT.txt  README.md  live_stitch_api.cpp  live_stitch_api.h  profiler.cpp  profiler.h  profilerEvents.h  vx_loomsl.sln  vx_loomsl.vcxproj
amd_openvx_extensions/amd_media/: CMakeLists.txt  README.md  decoder.cpp  encoder.cpp  kernels.cpp  kernels.h
amd_openvx_extensions/amd_migraphx/: CMakeLists.txt  README.md
amd_openvx_extensions/amd_nn/: CMakeLists.txt  COPYRIGHT.txt  README.md
amd_openvx_extensions/amd_opencv/: CMakeLists.txt  COPYRIGHT.txt  OpenCV_AddWeighted.cpp  OpenCV_BRISK_detector.cpp  OpenCV_Blur.cpp  OpenCV_Boxfilter.cpp  OpenCV_Canny.cpp  OpenCV_FAST_feature_detector.cpp  OpenCV_Gaussianblur.cpp  OpenCV_Good_Features_to_Track_detector.cpp  OpenCV_Laplacian.cpp  OpenCV_MSER_feature_detector.cpp  OpenCV_Medianblur.cpp  OpenCV_ORB_detector.cpp  OpenCV_SIFT_Compute.cpp  OpenCV_SIFT_Detect.cpp  OpenCV_SURF_Compute.cpp  OpenCV_SURF_Detect.cpp  OpenCV_Scharr.cpp  OpenCV_Sobel.cpp  OpenCV_Star_feature_detector.cpp  OpenCV_Tunnel.h  OpenCV_VX_Nodes.cpp  OpenCV_absdiff.cpp  OpenCV_adaptiveThreshold.cpp  OpenCV_add.cpp  OpenCV_bilateralFilter.cpp  OpenCV_bitwise_and.cpp  OpenCV_bitwise_not.cpp  OpenCV_bitwise_or.cpp  OpenCV_bitwise_xor.cpp  OpenCV_brisk_compute.cpp  OpenCV_buildOpticalFlowPyramid.cpp  OpenCV_buildPyramid.cpp  OpenCV_compare.cpp  OpenCV_convertScaleAbs.cpp  OpenCV_cornerHarris.cpp  OpenCV_cornerMinEigenVal.cpp  OpenCV_countNonZero.cpp  OpenCV_cvtColor.cpp  (+30 more)
amd_openvx_extensions/amd_openvx_extensions/: amd_loomsl.sln
amd_openvx_extensions/amd_rpp/: CMakeLists.txt  README.md
amd_openvx_extensions/amd_winml/: README.md  vx_winml.vcxproj  vx_winml.vcxproj.filters
apps/: CMakeLists.txt  README.md
apps/DGtest/: CMakeCache.txt  CMakeLists.txt  DGTest  Makefile  README.md  VXtensor.cpp  VXtensor.h  annmodule.h  cmake_install.cmake  img2tensor.py
apps/MIVisionX_winml_YoloV2/: MIVisionX_winml_YoloV2.vcxproj  MIVisionX_winml_YoloV2.vcxproj.filters  README.md
apps/ParseDigit/: MSERDetector.cpp  ParseDigit.h
apps/augmentation_unittest/: CMakeLists.txt  README.md  augmentation_unittests.cpp
apps/bubble_pop/: CMakeLists.txt  README.md
apps/cloud_inference/: README.md
apps/dg_test/: Argmax.cpp  Argmax.h  CMakeLists.txt  DGtest.cpp  DGtest.h  README.md  UserInterface.cpp  UserInterface.h  annmodule.cpp  annmodule.h  main.cpp
apps/image_augmentation/: CMakeLists.txt  README.md  image_augmentation.cpp
apps/image_augmentation_64/: image_augmentation.cpp
apps/mivisionx_inference_analyzer/: README.md  inference_control.py  inference_control.ui  mivisionx_inference_analyzer.py
apps/mivisionx_openvx_classifier/: CMakeLists.txt  README.md
apps/mivisionx_validation_tool/: README.md  inference_control.py  inference_control.ui  inference_setup.py  inference_viewer.py  inference_viewer.ui  mivisionx_validation_tool.py  rali_setup.py  rocal_setup.py
apps/mivisionx_winml_classifier/: README.md  classifier.cpp  winml_classifier.sln  winml_classifier.vcxproj  winml_classifier.vcxproj.filters
apps/mivisionx_winml_yolov2/: MIVisionX_winml_YoloV2.sln  MIVisionX_winml_YoloV2.vcxproj  README.md
apps/mivisonx_winml_classifier/: README.md  classifier.cpp  cvui.h  winml_classifier.vcxproj
apps/optical_flow/: CMakeLists.txt  README.md
apps/rali_performance_tests/: rali_performance_tests.cpp
apps/rali_performance_tests_with_depth/: rali_performance_tests_with_depth.cpp
apps/rali_unittests/: CMakeLists.txt  rali_unittests.cpp
apps/rgbdslam_v2/: INSTRUCTIONS_PREREQUISITES.md  README.md
conformance_tests/: CHANGELOG  CMakeLists.txt  README  openvx_cts_version.inc  run_tests.py
conformance_tests/android/: README_ANDROID
conformance_tests/cmake/: openvx.cmake  vcs_version.cmake
conformance_tests/test_conformance/: CMakeLists.txt  concerto.mak  shared_functions.h  test_accumulate.c  test_accumulatesquare.c  test_accumulateweighted.c  test_addsub.c  test_array.c  test_binop16s.c  test_binop8u.c  test_box3x3.c  test_canny.c  test_channelcombine.c  test_channelextract.c  test_convertcolor.c  test_convertdepth.c  test_convolve.c  test_dilate3x3.c  test_eqhist.c  test_erode3x3.c  test_fast.c  test_gaussian3x3.c  test_gaussianpyramid.c  test_graph.c  test_graph_callbacks.c  test_graph_delay.c  test_graph_roi.c  test_halfscalegaussian.c  test_harriscorners.c  test_histogram.c  test_integral.c  test_logging.c  test_lut.c  test_magnitude.c  test_main.c  test_main.h  test_meanstddev.c  test_median3x3.c  test_minmaxloc.c  test_multiply.c  (+12 more)
conformance_tests/test_data/: optflow_pyrlk_5x5.txt  optflow_pyrlk_9x9.txt
conformance_tests/test_data_generator/: CMakeLists.txt  README
conformance_tests/test_engine/: CMakeLists.txt  concerto.mak  test.h  test_bmp.c  test_bmp.h  test_engine.c  test_image.c  test_image.h  test_list_helper.h  test_utils.c  test_utils.h
rali/: CMakeLists.txt  README.md
rali/docs/: README.md
rali/include/: .turbo_jpeg_decoder.h.swp  bounding_box_graph.h  bounding_box_reader.h  cifar10_data_loader.h  cifar10_data_reader.h  cifar10_meta_data_reader.h  circular_buffer.h  coco_meta_data_reader.h  commons.h  context.h  decoder.h  decoder_factory.h  device_code.h  (+93 more)
tests/: CMakeLists.txt  README.md
utilities/: CMakeLists.txt  README.md
(+3632 files in other folders)
